--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "10.0.2",
+    "next": "12",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.9",
     "typescript": "^4.1.2"
   }
 }
